--- a/README.org
+++ b/README.org
@@ -73,6 +73,10 @@ its content.
 
 ** Abril 2025
 
+*** 22-Abr-25
++ [[https://philipzucker.com/inverse_method][The inverse method is a good fit for Datalog theorem proving]]. ~ Philip Zucker. #Datalog #Logic
++ [[https://arxiv.org/abs/2504.13360][In between myth and reality: AI for math (a case study in category theory)]]. ~ Răzvan Diaconescu. #LLMs #Math
+
 *** 20-Abr-25
 + [[https://www.microsiervos.com/archivo/matematicas/gridbach-proyecto-comprobar-distribuida-conjetura-goldbach.html][Gridbach: Un proyecto para comprobar de forma distribuida la famosa conjetura de Goldbach]]. ~ @Alvy #Matemáticas
 + [[https://gridbach.com/][Gridbach: The grid-computing system that calculates verification of the mathematical problem "Goldbach conjecture"]]. #Math
