--- a/README.org
+++ b/README.org
@@ -73,6 +73,9 @@ its content.
 
 ** Abril 2025
 
+*** 23-Abr-25
++ [[https://link.springer.com/article/10.1007/s00146-025-02340-8][Bullshit universities: the future of automated education]]. ~ Robert Sparrow, Gene Flenady. #GenerativeAI #Education
+
 *** 22-Abr-25
 + [[https://philipzucker.com/inverse_method][The inverse method is a good fit for Datalog theorem proving]]. ~ Philip Zucker. #Datalog #Logic
 + [[https://arxiv.org/abs/2504.13360][In between myth and reality: AI for math (a case study in category theory)]]. ~ Răzvan Diaconescu. #LLMs #Math
