--- a/README.org
+++ b/README.org
@@ -74,6 +74,11 @@ its content.
 
 ** Mayo 2025
 
+*** 06-May-25
++ [[https://www.isa-afp.org/entries/Sophie_Germain.html][Sophie Germain’s theorem (in Isabelle/HOL)]]. ~ Benoît Ballenghien. #ITP #IsabelleHOL #Math
++ [[https://www.johndcook.com/blog/2025/05/05/recamans-sequence/][Recamán’s sequence]]. ~ John D. Cook. #Math #Python
++ [[https://gnarledgrip.gitlab.io/25-emacs-tips.html][25 useful tips for Emacs (for beginners and advanced users)]]. Raoul Comninos. #Emacs
+
 *** 05-May-25
 + [[https://digitalcommons.chapman.edu/eecs_theses/3/][Compiling Haskell into Lean: A common abstract syntax for Haskell and interactive theorem provers]]. ~ Talitha Holcombe. #Haskell #FunctionalProgramming #ITP #LeanProver
 + [[https://journals-sol.sbc.org.br/index.php/rbie/article/download/4500/3206][Avaliando a habilidade do ChatGPT de realizar provas de dedução natural em lógica proposicional e lógica de predicados]]. ~ Francisco Leonardo Batista Martins et als. #LLLms #ChatGPT #Logic
